# napari-mito-hcs

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: python-app.yml
docs/: conf.py  config.rst  example_utils.rst  feature.rst  finder.rst  index.rst  pipeline.rst  segmentation.rst  stats.rst  utils.rst  widget.rst
scripts/: generate_examples.py  generate_screenshots.py  mito-hcs-batch.py
src/napari_mito_hcs/: __init__.py  feature.py  finder.py  napari.yaml  pipeline.py  segmentation.py  stats.py  utils.py  widget.py
src/napari_mito_hcs/config/: __init__.py  cells.toml  mito-hcs.toml  mitochondria.toml  nuclei.toml  shape_index.toml
src/napari_mito_hcs/data/: __init__.py
src/napari_mito_hcs/data/ko/: cell_image.tif  hole_feature.tif  mito_image.tif  nucl_image.tif  ridge_feature.tif  saddle_feature.tif  spot_feature.tif  valley_feature.tif
src/napari_mito_hcs/data/wt/: cell_image.tif  hole_feature.tif  mito_image.tif  nucl_image.tif  ridge_feature.tif  saddle_feature.tif  spot_feature.tif  valley_feature.tif
tests/: helpers.py  test_config.py  test_example_utils.py  test_feature.py  test_finder.py  test_pipeline.py  test_segmentation.py  test_stats.py  test_style.py  test_utils.py  test_widget.py
