[metadata]
name = napari_mito_hcs
version = 0.0.1
classifiers =
    Framework :: napari

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    napari
    numpy
    scipy
    scikit-image
    tomlkit
    tifffile
    pandas
    openpyxl

[options.packages.find]
where=src

[options.package_data]
napari_mito_hcs =
    *.tif
    *.toml

[options.entry_points]
napari.manifest =
    napari_mito_hcs = napari_mito_hcs:napari.yaml

[options.extras_require]
test =
    pytest
    pyflakes
    pycodestyle
    matplotlib
docs =
    sphinx
