[metadata]
name = napari_mito_hcs
description = MitoHCS Plugin for Napari
license = LICENSE.txt
long_description = README.md
version = 0.1.0
classifiers =
    Framework :: napari
    Programming Language :: Python

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    napari
    numpy
    scipy
    scikit-image==0.24
    tomlkit
    tifffile
    pandas
    openpyxl

[options.packages.find]
where=src

[options.package_data]
napari_mito_hcs =
    *.tif
    *.toml

[options.entry_points]
napari.manifest =
    napari_mito_hcs = napari_mito_hcs:napari.yaml
console_scripts =
    mito-hcs-batch = napari_mito_hcs.pipeline:run_mito_hcs_batch_cmd

[options.extras_require]
test =
    pytest
    pyflakes
    pycodestyle
    pytest-cov
docs =
    sphinx
